# uproot-browser

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  make_logo.py
src/uproot_browser/: __init__.py  __main__.py  dirs.py  exceptions.py  footer.py  header.py  plot.py  plot_mpl.py  plot_view.py  tree.py  tree_view.py  tui.py
src/uproot_browser/_compat/: typing.py
src/uproot_browser/_compat/importlib/: resources.py
src/uproot_browser/old_textual/: footer.py  header.py  tree_view.py  tui.py
src/uproot_browser/tui/: README.md  browser.css  browser.py  error.py  header.py  help.py  jump.py  left_panel.py  logo.py  messages.py  plot.py  right_panel.py  tab.py  tab_example.py  tools.py  tree.py  viewer.py
tests/: constraints.txt  test_dirs.py  test_package.py  test_printouts.py  test_tui.py
