[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "uproot_browser"
authors = [
  { name = "Henry Schreiner", email = "henryfs@princeton.edu" },
]
maintainers = [
  { name = "The Scikit-HEP admins", email = "scikit-hep-admins@googlegroups.com" },
]
license = { file = "LICENSE" }

description = "Tools to inspect ROOT files with uproot"
readme = "README.md"

requires-python = ">=3.7"

classifiers = [
  "License :: OSI Approved :: BSD License",
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Development Status :: 4 - Beta",
  "Typing :: Typed",
]

dynamic = ["version"]
dependencies = [
  'awkward >=1',
  'click >=8',
  'hist >=2.4',
  'importlib_resources; python_version<"3.9"',
  'lz4',
  'numpy >=1.13.3',
  'plotext >=5.2.2',
  'rich >=12.0.0',
  'textual >=0.18.0',
  'typing_extensions; python_version<"3.8"',
  'uproot >=4.2.1',
]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "scikit-hep-testdata",
]
iterm = [
  "matplotlib",
  "itermplot==0.5",
  "mplhep",
]
dev = [
  "ipython >=6",
  "pytest >=6",
  "scikit-hep-testdata",
]

[project.urls]
homepage = "https://github.com/scikit-hep/uproot-browser"
repository = "https://github.com/scikit-hep/uproot-browser"

[project.scripts]
uproot-browser = "uproot_browser.__main__:main"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/uproot_browser/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore:can't resolve package from __spec__ or __package__, falling back on __name__ and __path__:ImportWarning",  # PyPy NumPy
]
log_cli_level = "info"
testpaths = ["tests"]


[tool.mypy]
files = "src"
python_version = "3.8"
warn_unused_configs = true
strict = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["plotext.*", "awkward.*", "uproot.*", "matplotlib.*"]
ignore_missing_imports = true


[tool.pylint]
master.py-version = "3.7"
master.jobs = "0"
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.enable = [
  "useless-suppression",
]
messages_control.disable = [
  "broad-except",
  "design",
  "invalid-name",
  "line-too-long",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "duplicate-code",
  "unused-argument",  # Handled by Ruff
  "wrong-import-position",  # Handled by Ruff
]

[tool.ruff]
select = [
  "E", "F", "W", # flake8
  "B", "B904",   # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "PTH",         # flake8-use-pathlib
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "T20",         # flake8-print
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
]
ignore = [
    "E501",
    "E722",
    "RUF001",  # Unicode chars
    "PLR",
]
target-version = "py37"
src = ["src"]
typing-modules = ["uproot_browser._compat.typing"]
unfixable = [
  "T20",    # Removes print statements
  "F841",   # Removes unused variables
  "SIM118", # Dict .keys() removal (uproot)
]
exclude = []

[tool.ruff.per-file-ignores]
"noxfile.py" = ["T20"]
"tests/*" = ["T20"]
"src/uproot_browser/tree.py" = ["UP006"]
